--- a/Random_Forests.ipynb
+++ b/Random_Forests.ipynb
@@ -34,7 +34,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 3
+     "prompt_number": "*"
     }, 
     {
      "cell_type": "markdown", 
@@ -54,7 +54,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 4
+     "prompt_number": "*"
     }, 
     {
      "cell_type": "markdown", 
@@ -70,7 +70,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 5
+     "prompt_number": "*"
     }, 
     {
      "cell_type": "markdown", 
@@ -89,7 +89,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 6
+     "prompt_number": "*"
     }, 
     {
      "cell_type": "markdown", 
@@ -106,7 +106,14 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 7
+     "prompt_number": "*"
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": true, 
+     "input": [], 
+     "language": "python", 
+     "outputs": []
     }
    ]
   }
