--- a/Random_Forests.ipynb
+++ b/Random_Forests.ipynb
@@ -20,7 +20,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "from sklearn.datasets import load_iris", 
       "from sklearn.ensemble import RandomForestClassifier", 
@@ -34,7 +34,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": "*"
+     "prompt_number": 1
     }, 
     {
      "cell_type": "markdown", 
@@ -44,7 +44,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "iris = load_iris()", 
       "df = pd.DataFrame(iris.data, columns=iris.feature_names)", 
@@ -54,7 +54,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": "*"
+     "prompt_number": 2
     }, 
     {
      "cell_type": "markdown", 
@@ -70,7 +70,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": "*"
+     "prompt_number": 3
     }, 
     {
      "cell_type": "markdown", 
@@ -80,7 +80,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "features = df.columns[:4]", 
       "clf = RandomForestClassifier(n_jobs=2)", 
@@ -89,7 +89,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": "*"
+     "prompt_number": 4
     }, 
     {
      "cell_type": "markdown", 
@@ -99,21 +99,14 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "preds = iris.target_names[clf.predict(test[features])]", 
       "pd.crosstab(test['species'], preds, rownames=['actual'], colnames=['preds'])"
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": "*"
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": true, 
-     "input": [], 
-     "language": "python", 
-     "outputs": []
+     "prompt_number": 5
     }
    ]
   }
