--- a/Random_Forests.ipynb
+++ b/Random_Forests.ipynb
@@ -9,12 +9,28 @@
     {
      "cell_type": "markdown", 
      "source": [
-      "Taken from: http://blog.yhathq.com/posts/random-forests-in-python.html"
+      "#Random Forests I (Iris)", 
+      "", 
+      "Great intuition from Edwin Chen here: http://www.quora.com/Machine-Learning/How-do-random-forests-work-in-laymans-terms/answer/Edwin-Chen-1", 
+      "", 
+      "Also includes a description of bagging (bootstrap aggregating) data to form another kind of random forest.", 
+      "", 
+      "Decision Trees: http://scikit-learn.org/stable/modules/tree.html", 
+      "", 
+      "Random Forests: http://scikit-learn.org/stable/modules/ensemble.html, specifically http://scikit-learn.org/stable/modules/ensemble.html#forests-of-randomized-trees", 
+      "", 
+      "Feature importance / selection: http://scikit-learn.org/stable/auto_examples/ensemble/plot_forest_importances.html", 
+      "", 
+      "From http://en.wikipedia.org/wiki/Random_forest: \"Typically, for a dataset with $p$ features, $\\sqrt{p}$ features are used in each split.\"", 
+      "", 
+      "Following example adapted from: http://blog.yhathq.com/posts/random-forests-in-python.html"
      ]
     }, 
     {
      "cell_type": "markdown", 
      "source": [
+      "##Preliminaries", 
+      "", 
       "load libraries"
      ]
     }, 
@@ -30,7 +46,10 @@
       "try:", 
       "    pd.Factor", 
       "except AttributeError:", 
-      "    pd.Factor = pd.Categorical"
+      "    pd.Factor = pd.Categorical", 
+      "", 
+      "# seed rng for reproducibility", 
+      "np.random.seed(1)"
      ], 
      "language": "python", 
      "outputs": [], 
@@ -75,6 +94,8 @@
     {
      "cell_type": "markdown", 
      "source": [
+      "##Iris Species Classifier", 
+      "", 
       "define features and train classifier"
      ]
     }, 
@@ -83,6 +104,8 @@
      "collapsed": true, 
      "input": [
       "features = df.columns[:4]", 
+      "print(\"Classifier features: {}\".format(\", \".join(features)))", 
+      "# n_jobs - The number of jobs to run in parallel for both `fit` and `predict`.", 
       "clf = RandomForestClassifier(n_jobs=2)", 
       "y, _ = pd.factorize(train['species'])", 
       "clf.fit(train[features], y)"
@@ -94,19 +117,29 @@
     {
      "cell_type": "markdown", 
      "source": [
-      "run classifier on test and print confusion matrix"
+      "run classifier on test and print confusion matrix and accuracy"
      ]
     }, 
     {
      "cell_type": "code", 
      "collapsed": true, 
      "input": [
-      "preds = iris.target_names[clf.predict(test[features])]", 
-      "pd.crosstab(test['species'], preds, rownames=['actual'], colnames=['preds'])"
+      "predictions = iris.target_names[clf.predict(test[features])]", 
+      "pd.crosstab(test['species'], predictions, rownames=['Actual'], colnames=['Predictions'])"
      ], 
      "language": "python", 
      "outputs": [], 
      "prompt_number": 5
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": true, 
+     "input": [
+      "round(np.sum(test.species==predictions) / float(len(test)), 2)"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 7
     }
    ]
   }
