--- a/Random_Forests.ipynb
+++ b/Random_Forests.ipynb
@@ -13,6 +13,8 @@
       "", 
       "Great intuition from Edwin Chen here: http://www.quora.com/Machine-Learning/How-do-random-forests-work-in-laymans-terms/answer/Edwin-Chen-1", 
       "", 
+      "How to choose a classification model? http://blog.echen.me/2011/04/27/choosing-a-machine-learning-classifier/", 
+      "", 
       "Also includes a description of bagging (bootstrap aggregating) data to form another kind of random forest.", 
       "", 
       "Decision Trees: http://scikit-learn.org/stable/modules/tree.html", 
@@ -53,7 +55,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 1
+     "prompt_number": 75
     }, 
     {
      "cell_type": "markdown", 
@@ -63,7 +65,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": true, 
+     "collapsed": false, 
      "input": [
       "iris = load_iris()", 
       "df = pd.DataFrame(iris.data, columns=iris.feature_names)", 
@@ -73,7 +75,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 2
+     "prompt_number": 76
     }, 
     {
      "cell_type": "markdown", 
@@ -89,7 +91,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 3
+     "prompt_number": 77
     }, 
     {
      "cell_type": "markdown", 
@@ -101,7 +103,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": true, 
+     "collapsed": false, 
      "input": [
       "features = df.columns[:4]", 
       "print(\"Classifier features: {}\".format(\", \".join(features)))", 
@@ -112,7 +114,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 4
+     "prompt_number": 78
     }, 
     {
      "cell_type": "markdown", 
@@ -122,24 +124,41 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": true, 
+     "collapsed": false, 
      "input": [
       "predictions = iris.target_names[clf.predict(test[features])]", 
       "pd.crosstab(test['species'], predictions, rownames=['Actual'], colnames=['Predictions'])"
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 5
+     "prompt_number": 79
     }, 
     {
      "cell_type": "code", 
-     "collapsed": true, 
+     "collapsed": false, 
      "input": [
       "round(np.sum(test.species==predictions) / float(len(test)), 2)"
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 7
+     "prompt_number": 80
+    }, 
+    {
+     "cell_type": "markdown", 
+     "source": [
+      "what features where important?"
+     ]
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "for feature, importance in sorted(zip(clf.feature_importances_, features), reverse=True):", 
+      "    print(\"{}: {}\".format(importance, round(feature, 2)))"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 85
     }
    ]
   }
