--- a/Random_Forests_II.ipynb
+++ b/Random_Forests_II.ipynb
@@ -35,7 +35,7 @@
      "input": [
       "import urllib2", 
       "", 
-      "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor", 
+      "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor, ExtraTreesClassifier", 
       "from sklearn.metrics import r2_score", 
       "import numpy as np", 
       "import pandas as pd", 
@@ -46,7 +46,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 27
+     "prompt_number": 110
     }, 
     {
      "cell_type": "markdown", 
@@ -68,7 +68,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 28
+     "prompt_number": 98
     }, 
     {
      "cell_type": "code", 
@@ -81,7 +81,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 29
+     "prompt_number": 99
     }, 
     {
      "cell_type": "code", 
@@ -92,7 +92,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 30
+     "prompt_number": 100
     }, 
     {
      "cell_type": "markdown", 
@@ -112,7 +112,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 31
+     "prompt_number": 101
     }, 
     {
      "cell_type": "markdown", 
@@ -127,18 +127,19 @@
      "cell_type": "code", 
      "collapsed": false, 
      "input": [
-      "cols = train.columns[range(11) + [13]]  # include is_red feature", 
-      "print(\"Classifier features: {}\".format(\", \".join(list(cols))))", 
+      "features = train.columns[range(11) + [13]]  # include is_red feature", 
+      "print(\"Classifier features: {}\".format(\", \".join(list(features))))", 
       "", 
       "# n_estimators - The number of trees in the forest.", 
       "# max_features - The number of features to consider when looking for the best split.", 
       "# min_samples_split - The minimum number of samples required to split an internal node. I.e., don't split a node with less than this.", 
       "clf = RandomForestClassifier(n_estimators=20, max_features=9, min_samples_split=5)", 
-      "clf.fit(train[cols], train.quality)"
+      "#clf = ExtraTreesClassifier(n_estimators=20, max_features=9, min_samples_split=5)", 
+      "clf.fit(train[features], train.quality)"
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 32
+     "prompt_number": 115
     }, 
     {
      "cell_type": "markdown", 
@@ -154,7 +155,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 33
+     "prompt_number": 116
     }, 
     {
      "cell_type": "code", 
@@ -164,7 +165,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 34
+     "prompt_number": 117
     }, 
     {
      "cell_type": "markdown", 
@@ -179,14 +180,16 @@
      "cell_type": "code", 
      "collapsed": false, 
      "input": [
-      "cols = ['is_red', 'fixed acidity', 'density', 'pH']", 
-      "assert(len(set(train.columns) & set(cols)) == len(cols))", 
+      "features = ['is_red', 'fixed acidity', 'density', 'pH']", 
+      "features = train.columns[range(10) + [13]]", 
+      "assert(len(set(train.columns) & set(features)) == len(features))", 
+      "print(\"Regressor features: {}\".format(\", \".join(list(features))))", 
       "rf = RandomForestRegressor(n_estimators=20)", 
-      "rf.fit(train[cols], train.alcohol)"
+      "rf.fit(train[features], train.alcohol)"
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 35
+     "prompt_number": 105
     }, 
     {
      "cell_type": "markdown", 
@@ -198,7 +201,7 @@
      "cell_type": "code", 
      "collapsed": false, 
      "input": [
-      "predictions = rf.predict(test[cols])", 
+      "predictions = rf.predict(test[features])", 
       "r2 = round(r2_score(test.alcohol, predictions), 2)", 
       "print(\"R^2: {}\".format(r2))", 
       "", 
@@ -207,7 +210,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 36
+     "prompt_number": 106
     }, 
     {
      "cell_type": "markdown", 
@@ -229,7 +232,26 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 37
+     "prompt_number": 107
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "for feature, importance in sorted(zip(clf.feature_importances_, features), reverse=True):", 
+      "    print(\"{}: {}\".format(importance, round(feature, 2)))"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 108
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": true, 
+     "input": [], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 108
     }
    ]
   }
